--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ color: rgba(243, 243, 243, 0.797);
 border-radius: 30px;
 border-color: yellow;
 
-background: linear-gradient(0deg, #000000 0%, #795900 100%);
+background: linear-gradient(0deg, #000000 0%, #795900ef 100%);
 }
 
 .App-logo {
