--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 font-weight: normal;
 width: auto;
 display: block;
-color: rgba(243, 243, 243, 0.797);
+color: rgba(248, 243, 243, 0.797);
 border-radius: 30px;
 border-color: yellow;
 
@@ -30,12 +30,15 @@ background: linear-gradient(0deg, #000000 0%, #795900ef 100%);
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(245, 237, 237);
 }
 
 .App-link {
-  color: #61dafb;
+  color: rgb(247, 15, 15); 
+  
 }
+  
+
 
 @keyframes App-logo-spin {
   from {
